corrected swagger
