# docs/swagger.json
@@ -144,16 +144,6 @@
                     "subscriptions"
                 ],
                 "summary": "List all subscriptions",
-                "parameters": [
-                    {
-                        "description": "Filter by user_id or service_name",
-                        "name": "filter",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.JSONSubRequest"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
